src/styles/layout.module.scss
.main {
	padding: 1rem 1rem;
	height: 100%;
	display: flex;
	justify-content: center;
}

.background-image {
	background-image:  linear-gradient(rgba(76, 71, 119, 0.5), rgba(76, 71, 119, 0.5)), url('../../person-holding-grinder.jpg');
	background-position: center center;
	height: 100%;
	opacity: 0.5;
	position: fixed;
	width: 100%;
	z-index: -1;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
}

.content-wrapper {
	width: 100%;
	max-width: 55rem;
	height: 100%;
	margin-right: auto;
	margin-left: auto;
	background-color: white;
    border-radius: 0.3rem;

}

.content {
	margin-left: auto;
	margin-right: auto;
	height: 100%;
}

